// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches the snapshot with span when icon prop is passed 1`] = `
<DocumentFragment>
  <li
    class="pf-c-list__item"
  >
    <span
      class="pf-c-list__item-icon"
    >
      icon
    </span>
    Test
  </li>
</DocumentFragment>
`;

exports[`Matches the snapshot without span by default 1`] = `
<DocumentFragment>
  <li
    class=""
  >
    Test
  </li>
</DocumentFragment>
`;
